# Infomate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  init.sh  requirements.txt
apps/clock/: clock.h
apps/dvd/: dvd.h
include/: app.h  display.h  input.h  manager.h  port.h  registry.h
src/: config.py  main.cpp  main.py  manager.cpp
src/adapter/: api.h  matrix.h  terminal.h
src/api/: base.py  database.py  handler.py  main.py
src/api/routes/: account.py  apps.py  device.py
src/apps/clock/: clock.py  manifest.yaml
src/apps/dvd/: dvd.py  manifest.yaml
src/apps/photo/: manifest.yaml  photo.py
src/apps/soccer/: manifest.yaml  soccer.py
src/apps/spotify/: manifest.yaml  spotify.py
src/apps/strava/: manifest.yaml  strava.py
